// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMsgForm render should render 1`] = `
<Flipper
  back={
    <Dialog
      buttons={
        Object {
          "primary": Object {
            "name": "Ok",
            "onClick": [Function],
          },
          "secondary": Object {
            "name": "Cancel",
            "onClick": [Function],
          },
        }
      }
      headerClass="send_msg"
      headerIcon="fe-cog"
      headerStyle="barber"
      subtitle="Advanced Settings"
      title="Send Message"
    >
      <p>
        Quick Replies are made into buttons for supported channels
      </p>
      <TaggingElement
        entry={
          Object {
            "value": Array [],
          }
        }
        name="Replies"
        onChange={[Function]}
        onCheckValid={[Function]}
        placeholder="Quick Replies"
        prompt="Enter a Quick Reply"
      />
      <p>
        Attachments are used to send pictures or other media with your message
      </p>
      <React.Fragment>
        <div
          className="urlAttachment"
        >
          <div
            className="typeChoice"
          >
            <SelectElement
              entry={
                Object {
                  "value": null,
                }
              }
              name="Type Options"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": "Image URL",
                    "value": "image",
                  },
                  Object {
                    "label": "Audio URL",
                    "value": "audio",
                  },
                  Object {
                    "label": "Video URL",
                    "value": "video",
                  },
                  Object {
                    "label": "Upload Attachment",
                    "value": "upload",
                  },
                ]
              }
              placeholder="Add Attachment"
              styles={
                Object {
                  "control": [Function],
                  "menuList": [Function],
                  "option": [Function],
                }
              }
            />
          </div>
        </div>
        <input
          onChange={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
          type="file"
        />
      </React.Fragment>
      <CheckboxElement
        checked={false}
        description="Send a message to all destinations known for this contact."
        labelClassName="checkbox"
        name="All Destinations"
        onChange={[Function]}
        title="All Destinations"
      />
    </Dialog>
  }
  front={
    <Dialog
      buttons={
        Object {
          "primary": Object {
            "name": "Ok",
            "onClick": [Function],
          },
          "secondary": Object {
            "name": "Cancel",
            "onClick": [Function],
          },
        }
      }
      headerClass="send_msg"
      title="Send Message"
    >
      <TypeList
        __className=""
        initialType={
          Object {
            "component": [Function],
            "description": "Send the contact a message",
            "form": undefined,
            "localization": [Function],
            "localizeableKeys": Array [
              "text",
              "quick_replies",
            ],
            "name": "Send Message",
            "type": "send_msg",
          }
        }
        onChange={[MockFunction]}
      />
      <Connect(TextInputElement)
        autocomplete={true}
        count="SMS"
        entry={
          Object {
            "value": "Hey!",
          }
        }
        focus={true}
        name="Message"
        onChange={[Function]}
        showLabel={false}
        textarea={true}
      />
      <div
        className="quickReplySummary"
      />
    </Dialog>
  }
/>
`;

exports[`SendMsgForm updates should allow switching from router 1`] = `
Array [
  Object {
    "all_urns": false,
    "attachments": Array [],
    "quick_replies": Array [],
    "text": "What is your favorite color?",
    "type": "send_msg",
    "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
  },
]
`;

exports[`SendMsgForm updates should save changes 1`] = `
Object {
  "attachments": Array [],
  "quickReplies": Object {
    "value": Array [
      "red",
      "green",
      "blue",
    ],
  },
  "sendAll": true,
  "text": Object {
    "value": "What is your favorite color?",
  },
  "valid": true,
}
`;

exports[`SendMsgForm updates should save changes 2`] = `
Array [
  Object {
    "all_urns": true,
    "attachments": Array [],
    "quick_replies": Array [
      "red",
      "green",
      "blue",
    ],
    "text": "What is your favorite color?",
    "type": "send_msg",
    "uuid": "68b029c9-6400-4f46-947a-b61c619a7198",
  },
]
`;
